tests/errors/test_27.xpp
// Invalid type cast operation

fn main() void {
    let x = true as i64;
    let y = 21 as bool;
}